PriorityDLTKExtensionManager: synchronizatin + generics, fixes bug 391938